add 'messages' tag and use it
